# ZPP011_V36

./: .coverage  .gitignore  CHANGELOG.md  CHANGELOG_v42.1.md  README.md  README_v36.md  RELEASE_v36.md  ZPP011_Analyzer_v36.1.spec  ZPP011_PySide6.spec  ZPP011_PySide6_v42.0_latest.spec  ZPP011_PySide6_项目总结.md  ZPP011_debug.spec  ZPP011_v36.1.spec  ZPP011_v36.2.spec  ZPP011_v36.3.spec  ZPP011_v36.spec  ZPP011_v36_dbg.spec  ZPP011_v36_debug.spec  ZPP011_v36_debug2.spec  ZPP011_v37.spec  ZPP011_v37_release.spec  ZPP011_v42.0_preview.spec  ZPP011_偏差分析器_v35.4.spec  ZPP011_偏差分析器_v36.32.0.spec  ZPP011_偏差分析器_v36.spec  ZPP011_功能蓝图.md  ZPP011_技术蓝图_v11.0.md  ZPP011偏差分析器_v35.1.spec  ZPP011偏差分析器_v36.31.0_20260516_184921.spec  ZPP011偏差分析器_v36.32.0_20260516_1915.spec  ZPP011偏差分析器_v36.32.0_20260516_1942.spec  ZPP011偏差分析器_v36.39.0.spec  ZPP011偏差分析器_v36.40.0.spec  ZPP011偏差分析器_v36.40.0_20260519_085944.spec  ZPP011偏差分析器_v36.40.0_20260519_092407.spec  ZPP011偏差分析器_v36.40.0_20260519_093112.spec  ZPP011偏差分析器_v36.40.0_20260519_124857.spec  ZPP011偏差分析器_v36.40.3_20260519_203710.spec  ZPP011偏差分析器_v37.4.3.spec  ZPP011偏差分析器_v37.4.4.spec  (+278 more)
.zpp011_audit/: mode.json
analysis/: __init__.py  analyzer.py  analyzer.py.bak.20260518  net_offset.py
config/: __init__.py  audit_cols_config.py  auto_quarantine_config.json  column_widths.json  config.yaml  constants.py  defaults.json  error_messages.json  inventory_mapping.json  material_name_presets.json  paths.py  s01_display.yaml  settings.py  version.json  workshop_inventory_mapping.json
core/: advanced_ppt_generator.py  advanced_ppt_generator_v2.py  (+33 more)
(+232 files in other folders)
