[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zpp011"
version = "0.1.0"
description = "生产偏差分析器"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "PySide6>=6.5",
    "pandas>=2.0",
    "openpyxl>=3.0",
    "python-pptx>=0.6",
    "matplotlib>=3.5",
    "requests>=2.28",
]

[project.urls]
Homepage = "https://github.com/peige/zpp011"

[project.scripts]
zpp011 = "run_pyside6:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["analysis*", "core*", "gui_pyside6*", "domain*"]
exclude = ["tests*", "docs*"]

[tool.setuptools]
include-package-data = true
py-modules = ["run_pyside6"]
